Password-protected ZIPs and RARs now supported
Using wxSizers to layout window instead of doing it by hand
Right-to-Left mode implemented
Fit-only-if-Oversized implemented
Using events to pass information between classes
make install, install-strip, uninstall, distclean targets
Makefile checks dependencies correctly now
TIFF support taken out for simplicity, size
Linux and Windows icons improved

0.7 -
Fit to Width and Fit to Height now better uses available space
Scrollbars should not show up unless needed anymore
Right-click menu
Revert to scrolling to the top on page change
Can open directories of images

0.6 -
Unicode support
Windows version
(Prev|Next)PageTurn() bug fixes
No longer calling GoToPage() when the page numbers haven't changed
Intelligently determine whether an image will require scrollbars, and resize
 accordingly
Display correct pages when going from ONEPAGE mode to TWOPAGE mode
User can now set cache length

0.5 -
bzip2 support has been dropped until someone actually needs it
Now using non-GPL unrar code for cbr's
Added exception to GPL to use unrar
Now using zlib and wxZipInputStream for cbz's
6 selectable scaling algorithms
Moved page navigation features to "Go" menu
Functions renamed for consistency (Zoom, Mode, and Filter)
View settings, window dimensions, and current working directory are now saved
Read-ahead caching and multithreading for responsiveness
Added ability to rotate pages
Added page navigation button bar to the bottom of the window

0.4 -
Added support for bzip2 archives, with extension .bz2 or .cbb
Added more sensical keyboard shortcuts
New icon, courtesy of gotterdamm
Added Fit to Width and Fit to Height zoom modes
Added Single Page mode
New configure script generated by KDevelop
Now using wxLog instead of stderr for logging and errors
Added Go To Page function

0.3 -
You can specify a comic book from the commandline now
Starts with open dialog when started without arguments
Added single page slide