@@ -1,7 +1,4 @@
 CC = `wx-config --cxx`
-INCLUDE = -Iunrar -Iunzip
-CFLAGS = -O2 -Wall -pipe
-CPPFLAGS = `wx-config --cxxflags` $(CFLAGS) -D_UNIX $(INCLUDE)
 LDFLAGS = `wx-config --libs` -Lunrar -lunrar -Lunzip -lminiunzip
 INSTALL = install
 INSTALL_PROGRAM = $(INSTALL)
@@ -9,44 +6,23 @@ prefix = /usr/local
 exec_prefix = $(prefix)
 bindir = $(exec_prefix)/bin
 
-.SUFFIXES: .c .cpp .png .h .d .o .a
+.SUFFIXES: .cpp .o .a
 
-DEPS = $(patsubst %.cpp,%.d,$(wildcard src/*.cpp))
 OBJS = $(patsubst %.cpp,%.o,$(wildcard src/*.cpp))
-ICONS = $(patsubst %.png,%.h,$(wildcard src/*.png))
 
 all: comical
 
--include $(DEPS)
-
-%.h : %.png bin2h
-	./bin2h -c $< $*.h
-
-%.o : %.c
-	$(CC) $(CFLAGS) -c -o $*.o $<
-
-%.o : %.cpp
-	$(CC) $(CPPFLAGS) -c -o $*.o $<
-
-# make the ICONS a build dep for the .d files, because -MG doesn't include the
-# path on dependencies it can't find
-%.d : %.cpp $(ICONS)
-	@set -e; rm -f $@; \
-	 $(CC) -MM -MG $(CPPFLAGS) -MT '$*.o' $< > $@.$$$$; \
-	 sed 's,\($*\)\.o[ :]*,\1.o $@ : ,g' < $@.$$$$ > $@; \
-	 rm -f $@.$$$$
-
 comical: $(OBJS) unrar/libunrar.a unzip/libminiunzip.a
 	$(CC) -o $@ $(OBJS) $(LDFLAGS)
+
+$(OBJS):
+	$(MAKE) -C src
 
 unrar/libunrar.a:
 	$(MAKE) lib -C unrar -f makefile.linux
 
 unzip/libminiunzip.a:
 	$(MAKE) -C unzip
-
-bin2h: src/bin2h.o
-	$(CC) -o $@ src/bin2h.o
 
 install: comical
 	$(INSTALL_PROGRAM) comical $(DESTDIR)$(bindir)/comical
@@ -58,7 +34,8 @@ uninstall:
 	rm -f $(DESTDIR)$(bindir)/comical
 
 clean:
-	rm -f $(OBJS) $(ICONS) comical
+	$(MAKE) clean -C src
+	rm -f comical
 
 distclean:
 	$(MAKE) clean
